@@ -1,9 +1,10 @@
 use strict;
 use warnings;
 
-use Test::More 'tests' => 2;
+use Test::More 'tests' => 3;
 use Test::NoWarnings;
 use Wikibase::Datatype::Value::Monolingual;
+use Unicode::UTF8 qw(decode_utf8);
 
 # Test.
 my $obj = Wikibase::Datatype::Value::Monolingual->new(
@@ -11,3 +12,11 @@ my $obj = Wikibase::Datatype::Value::Monolingual->new(
 );
 my $ret = $obj->value;
 is($ret, 'Example', 'Get value().');
+
+
+# Test.
+$obj = Wikibase::Datatype::Value::Monolingual->new(
+	'value' => decode_utf8('čeština'),
+);
+$ret = $obj->value;
+is($ret, decode_utf8('čeština'), 'Get value() with unicode.');
